# mcp-stata

./: .agents  .claude-plugin  .codex-plugin  .coverage  .envrc.example  .gitignore  .mcp.json  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PNG_EXPORT_ISSUES.md  README.md  benchmark_arrow.py  benchmark_graph_detection.py  diff.txt  mcp_list_tools_and_graphs.py  package.json  pyproject.toml  pytest.ini  server.json  test.diff  test_pystata.py  test_run_each_line.py  test_stata_setup.py  update_open_smcl.py
.agents/plugins/: marketplace.json
.github/ISSUE_TEMPLATE/: install-failure.yml
.github/workflows/: build-test.yml  deploy-worker.yml  publish.yml  release.yml  test-installers.yml  version-sync.yml
artifacts/: test_results.xml
benchmarks/: README.md
benchmarks/history/: perf_2026-05-09_legacy.json  perf_2026-05-09_optimized.json  run_20260509_144224.json
benchmarks/mcp_vs_terminal/: README.md  baseline.py  benchmark.py  broken_script.do  dashboard.py  db.py  ingest.py  mcp_client.py  pyproject.toml  pytest.ini  run_baseline.py  run_benchmark.py  setup_bench.sh  tasks.json  terminal_client.py
benchmarks/mcp_vs_terminal/benchmark/: __init__.py  compare.py  harness.py  results.py
benchmarks/mcp_vs_terminal/tests/: conftest.py  test_api.py  test_harness.py  test_persistence.py
benchmarks/scripts/: benchmark_statest.py
docs/: EVAL_DESIGN.md  MCP_COMPATIBILITY.md  RESEARCHER_WORKFLOWS.md  SECURITY_MODEL.md
native_sorter/: Cargo.toml
plugin/: .mcp.json  AGENTS.md  EVALS.md  GETTING_STARTED.md  README.md  SECURITY.md  gemini-extension.json  install.ps1  install.sh  installer.json
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/.codex-plugin/: plugin.json
plugin/agents/: stata-analyst.manifest.json  stata-analyst.md  stata-debugger.manifest.json  stata-debugger.md  stata-publication-reviewer.manifest.json  stata-publication-reviewer.md  stata-replication-lead.manifest.json  stata-replication-lead.md
plugin/evals/: run_toolkit_evals.py
plugin/hooks/: hooks.json
plugin/skills/: skills
scratch/: check_mata.py
scripts/: benchmark_discovery.py  benchmark_statest.py  benchmark_ui_sort.py  check_server_version.py  clean_test.ps1  generate_toolkit_catalog.py  install_marketplaces.ps1  run_inspector.ps1  run_mcp_test_windows.ps1  run_toolkit_evals.py  setup_toolkit.py  sync_server_version.py  test_build.sh  test_capture.py  verify_polars_optimization.py  watch_rust.sh
scripts/benchmarks/: benchmark_rust_ops.py  run_e2e_benchmark.py
scripts/install/: agents.py  install_marketplaces.sh  setup_toolkit.py
scripts/js_benchmark/: benchmark.js  package-lock.json  package.json
scripts/log_analysis/: LOG_MITIGATION_PLAN.md  benchmark_backward_scan.py  generate_huge_log.py  generate_realistic_logs.py  generate_synthetic_smcl.py  measure_tokens.py
scripts/maintenance/: check_server_version.py  diagnostic_rc.py  generate_toolkit_catalog.py  run_toolkit_evals.py  sync_server_version.py
scripts/tests/: clean_test.ps1  run_inspector.ps1  test.do  test_build.sh  verify_sessions.py
skill/: SKILL.md
skills-catalog/causal-inference/: SKILL.md
skills-catalog/modernize/: SKILL.md
skills-catalog/publication-qa/: SKILL.md
src/mcp_stata/: __init__.py  __main__.py  config.py  discovery.py  discovery.py.bak  fastmcp_text_compact.py  graph_detector.py  linter.py  models.py  native_ops.py  native_sorter.py  server.py  sessions.py  stata_client.py  stata_client.py.bak  streaming_io.py  test_stata.py  toolkit_catalog_data.py  ui_http.py  utils.py  worker.py
src/stata_mcp/: discovery.py  models.py  server.py  stata_client.py
src_rust/: lib.rs
tests/: benchmark_tests.sh  conftest.py  install_sh_harness.py  repro_cancellation.py  repro_regression.py  test_arrow_unit.py  test_break_stability_e2e.py  test_build_integration.py  test_cache_advanced.py  test_cancel_task_tool_e2e.py  test_cancellation.py  test_cancellation_integration.py  test_cancellation_robustness.py  test_concurrent_graph_cache.py  test_discovery_cli.py  test_discovery_darwin.py  test_discovery_linux.py  test_discovery_windows.py  test_e2e_isolation.py  test_e2e_streaming_stdio.py  test_env_diagnostic.py  test_error_backward_search.py  test_error_discovery.py  test_error_e2e.py  test_error_message_parsing.py  test_error_visibility_e2e.py  test_eval_runner_unit.py  test_external_do_file_full.py  test_graph_caching_e2e.py  test_graph_notification_dedup.py  test_help_parsing.py  test_initialization_fix.py  test_install_ps1_unit.py  test_install_sh_telemetry_unit.py  test_install_sh_unit.py  test_installer_telemetry_e2e.py  test_integration.py  test_integration_windows.py  test_linter_unit.py  test_list_graphs_ttl_cache.py  (+52 more)
tests/client/: test_discovery_darwin.py  test_discovery_linux.py  test_discovery_performance.py  test_discovery_verification.py  test_discovery_windows.py  test_pystata_graph_integration.py  test_real_sfi_integration.py  test_sfi_direct_optimizations.py  test_sfi_graph_detection.py
tests/data/: test_arrow_unit.py  test_log_tools_unit.py  test_mata_serialization_unit.py  test_missing_values.py  test_native_sorter.py  test_sync_version_unit.py  test_token_efficiency.py
tests/execution/: test_build_integration.py  test_e2e_isolation.py  test_external_do_file.py  test_external_optional.py  test_initialization_fix.py  test_perf_user_journeys.py  test_regression_clamp.py  test_robustness_extended.py  test_robustness_suite.py
tests/fixtures/: smcl_perfection_clamp_expected.txt
tests/install_scripts/: test_linux_installers.py
tests/installer/: test_ensure_symlink.py  test_install_bootstrap.py  test_install_ps1_bootstrap.py  test_install_ps1_unit.py  test_install_sh_telemetry_unit.py  test_install_sh_unit.py  test_installer_telemetry_e2e.py  test_setup_toolkit_integration.py  test_windows_specific.py
tests/server/: test_eval_runner_unit.py  test_fastmcp_compact_tool_text.py  test_mock_protocol.py  test_server.py  test_sessions_e2e.py  test_sessions_integration.py  test_toolkit_catalog_unit.py  (+1 more)
worker/: README.md  package.json  wrangler.toml
(+137 files in other folders)
