[package]
name = "mcp_stata_native_sorter"
version = "1.17.0"  # Sync with project version
edition = "2024"
authors = ["Thomas Monk <t.d.monk@lse.ac.uk>"]
description = "High-performance native sorting extension for mcp-stata using PyO3 and Rayon."
license = "AGPL-3.0-or-later"
repository = "https://github.com/tmonk/mcp-stata"
readme = "README.md"
keywords = ["stata", "mcp", "sorting", "pyo3"]

[lib]
name = "_native_sorter"
path = "src_rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
numpy = "0.27"
rayon = "1.10"

[profile.release]
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
