[project]
name = "mcp-stata"
dynamic = ["version"]
description = "Model Context Protocol (MCP) server for Stata"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Thomas Monk", email = "t.d.monk@lse.ac.uk" }
]
keywords = ["mcp", "stata", "statistics", "econometrics", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "build>=1.3.0",
    "hatch>=1.16.2",
    "mcp[cli]>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pystata>=0.0.1",
    "stata_setup>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tmonk/mcp-stata"
Repository = "https://github.com/tmonk/mcp-stata"
Issues = "https://github.com/tmonk/mcp-stata/issues"

[project.scripts]
mcp-stata = "mcp_stata.server:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_stata"]

[tool.hatch.build.targets.sdist]
exclude = ["/tests", "/uv.lock"]
