[project]
name = "mcp-vs-terminal-benchmark"
version = "0.1.0"
description = "Benchmark comparing mcp-stata vs Terminal Stata-SE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
    "google-genai>=2.0.1",
    "flask>=3.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
